<resources>
    <string name="app_name">Sad Humster</string>
    <string name="question">Question</string>
    <string name="answer">answer</string>
    <string name="joke">Joke</string>
    <string name="enter_joke">Enter joke name</string>
    <string name="enter_question">Enter question</string>
    <string name="enter_answer">Enter answer</string>
    <string name="add">Add</string>
    <string name="enter">Got a joke? Spill the beans!</string>
    <string name="joke_title">#%d %s %s</string>
    <string name="error">Try again</string>
    <string name="from_internet">(internet)</string>
    <string name="from_fragment">(your)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try again later</string>
    <string name="home">Home</string>
    <string name="favourite">Favorites</string>
</resources>